The issue where images are stretched vertically in small safari windows has been fixed.

--- a/main_style.css
+++ b/main_style.css
@@ -284,7 +284,6 @@ img {
   margin-left: auto;
   margin-right: auto;
   max-width: calc(100% - 0.8em);
-  max-height: 100%;
   border: 0.4em solid var(--color-black);
   border-radius: 0.4em;
 }
@@ -292,6 +291,7 @@ p.image_box {
   display: flex;
   flex-wrap: wrap;
   align-content: space-around;
+  align-items: center;
   justify-content: center;
   margin-top: 0.5em;
   margin-bottom: 0.5em;
